2003-02-05  Ross Burton  <ross@burtonini.com>

	* help/C/gnotravex.xml: Updated Rob's email.

2002-12-11  Ross Burton  <ross@burtonini.com>

	* gnotravex.c: Rename game to "GNOME Tetravex".

2002-11-21  Tim Musson  <trmusson@ihug.co.nz>

	* gnotravex.c (about_cb): No more multiple About dialogs. (Bug #97320)
	(score_cb), (game_score): Made Score dialog modal. (Bug #97320)

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnotravex.desktop.in: add X-GNOME-BUGZILLA stuff

2002-08-23  Ross Burton  <ross@burtonini.com>

	* gnotravex.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-07-07  Ross Burton  <ross@burtonini.com>

	* gnotravex.c(gui_draw_pause): Fix an identical memleak to the one
	in redraw_all, thanks to David Westlund for pointing it out.

2002-07-04  David Westlund  <daw@wlug.westbo.se>
 
	* gnotravex.c: The tiles on the right don't disappear when moving
	tiles from the menu (fixes #78189). Fixed a possible memory leak
	in function redraw_all.

2002-07-04  Ross Burton  <ross@burtonini.com>

	* gnotravex.c: When the game is paused, hide the numbers so the
	player cannot cheat. (closes #85476)
	
2002-06-03  Ross Burton  <ross@burtonini.com>

	* gnotravex.c: Load pixmaps from the application path, instead of
	the system (fixes #83917). Also set the about dialog to be a
	transient for the parent window.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* gnotravex.c: (about_cb): add icon to the about dialog

2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/gnotravex-C.omf: updated for new format of SK 0.3.8.
	
2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnotravex.c: (save_state): remove nstr(), patch from
	r_kinder@yahoo.com (Richard Kinder)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/gnotravex.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml